# evilve

./: .cursorrules  .gitignore  pybox  pyproject.toml
app/: __init__.py  main.py
app/api/: __init__.py  agents.py  chat.py  crud_skills.py  handoff.py  health.py  llms.py  logs.py  providers.py  router.py  sessions.py  skills.py  tools.py
app/core/: __init__.py  config.py  db.py  exceptions.py  logging.py  model_provider.py
app/models/: __init__.py  agent.py  llm_meta.py  orchestration.py  skill.py  tool.py
app/runtime/: __init__.py  agent_tools.py  agents.py  groupchat.py  human.py  participant.py  system.py
app/schemas/: __init__.py  agent.py  handoff.py  health.py  model.py  orchestration.py  runtime.py  skill.py  tool.py
app/services/: __init__.py  agent_sdk_service.py  agent_service.py  handoff_service.py  health_service.py  skill_service.py  tool_service.py
app/tools/: __init__.py  registry.py  runtime_tools.py
app/tools/fs/: __init__.py  list_dir.py  read_file.py  write_file.py
app/tools/python/: __init__.py  pybox.py
app/tools/shell/: __init__.py  bash.py  python.py
app/tools/util/: __init__.py  datetime_now.py
skills/python_sandbox_exec/: Skill.md
skills/summary/: Skill.md
skills/tavily_web_search/: Skill.md
skills/toplogy/: SKILL.md
tests/e2e/: test_agents_handoff.py
tests/integration/: test_agent_skill_integration.py  test_multi_agents_handsoff.py
tests/unit/: __init__.py  test_agent_chat.py  test_agent_service.py  test_builtin_tools.py  test_health_service.py  test_skill_manager.py  test_tool_registry.py
